--- a/intro.tex
+++ b/intro.tex
@@ -12,8 +12,16 @@ In the quantum world, obfuscation has been studied in \cite{AJJ14,AF16arxiv}. In
 
 %In this work, we continue the study of computational indistinguishable obfuscation in the quantum world.
 Our contribution establishes indistinguishability obfuscation for certain families of quantum circuits. First, we provide a new definition of quantum indistinguishability obfuscation 
-...
-$Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
+\Anne{I need to check \cite{AG04} again: does their definition include a quantum state, as output by the obfuscator?}
+$Qi\mathcal{O}$ 
+%and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. 
+We first focus on the family of Clifford circuits, and show two methods of obfuscation: one method based on the canonical representation of Cliffords, and another based on the 
+% is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the 
+principle of gate teleportation~\cite{GC99} (see Section~\ref{XX}). The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, there could be advantages to storing quantum programs into quantum states, for instance to take advantage of their \emph{uncloneability} \cite{Aar09,BL19arxiv}. Furthermore, in our main result, we manage to generalize the gate-teleportation scheme for Clifford circuits, and show an $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford ($T$) gates is at most logarithmic in the circuit size. 
+
+
+    
+%this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
 
 %In this work, we continue the study of $i\mathcal{O}$ in the quantum world. We give two main contributions, both assuming the existence of quantum-secure $q\mathcal{O}$ for classical circuits.
 %Our first contribution echoes the private-to-public key transformation of~\cite{SW14}, by showing its applicability to the encryption of \emph{quantum} messages. In this case, the security is based on (quantum-secure one-way functions?)..., and is shown according to the notion of quantum semantic security ~\cite{BJ15,ABF+16}. Our second contribution shows how to build $i\mathcal{O}$ for certain families of quantum circuits. Namely, we show two different ways in which Clifford circuits admit an $i\mathcal{O}$ scheme. The first method is based on the canonical representation of Clifford circuits~\cite{AG04,Nest10}, while the second method is based on the principle of gate teleportation~\cite{GC99}. We  extend these schemes to circuits that include layers of non-Clifford $\tgate$-gates, as long as each Clifford layer is within a family of circuits that admit the $i\mathcal{O}$ obfuscation described above, and as long as the $\tgate$-gates are in fixed positions.
