--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 %\usepackage[toc]{multitoc}
+\usepackage{amsmath}
+\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=red]{hyperref}
+\usepackage[nameinlink,capitalise]{cleveref}
 %\usepackage{cleveref}
 \floatname{algorithm}{Algorithm}
 
